# GDPolyak

./: .gitignore  LICENSE  README.md  experiments.ipynb  pyproject.toml
src/: GDPolyak.py  utils.py
